enhance website ; add story page ; prepare for easy translation process

--- a/en/contribute.html
+++ b/en/contribute.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
-<html lang="fr">
+<html lang="en">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contribuer à BiblioGenius - Testeur Alpha & Développement Open Source</title>
-    <meta name="description" content="Devenez testeur Alpha ou contribuez au développement de BiblioGenius, application Open Source de gestion de bibliothèque. Rust, Flutter, Symfony.">
+    <title>Contribute to BiblioGenius - Alpha Tester & Open Source Development</title>
+    <meta name="description" content="Become an Alpha tester or contribute to BiblioGenius development, an Open Source library management app. Rust, Flutter, Symfony.">
 
     <!-- Canonical & hreflang -->
-    <link rel="canonical" href="https://bibliogenius.org/contribute.html">
+    <link rel="canonical" href="https://bibliogenius.org/en/contribute.html">
     <link rel="alternate" hreflang="de" href="https://bibliogenius.org/de/contribute.html">
     <link rel="alternate" hreflang="en" href="https://bibliogenius.org/en/contribute.html">
     <link rel="alternate" hreflang="es" href="https://bibliogenius.org/es/contribute.html">
@@ -17,16 +17,16 @@
 
     <!-- Open Graph -->
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://bibliogenius.org/contribute.html">
-    <meta property="og:title" content="Contribuer à BiblioGenius - Testeur Alpha & Open Source">
-    <meta property="og:description" content="Devenez testeur Alpha ou contribuez au développement de BiblioGenius. Backend Rust, App Flutter, Hub Symfony.">
+    <meta property="og:url" content="https://bibliogenius.org/en/contribute.html">
+    <meta property="og:title" content="Contribute to BiblioGenius - Alpha Tester & Open Source">
+    <meta property="og:description" content="Become an Alpha tester or contribute to BiblioGenius development. Rust backend, Flutter app, Symfony hub.">
     <meta property="og:image" content="https://bibliogenius.org/assets/home-bibliogenius-fr.jpg">
-    <meta property="og:locale" content="fr_FR">
+    <meta property="og:locale" content="en_US">
 
     <!-- Twitter Card -->
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title" content="Contribuer à BiblioGenius - Testeur Alpha & Open Source">
-    <meta name="twitter:description" content="Devenez testeur Alpha ou contribuez au développement de BiblioGenius. Backend Rust, App Flutter, Hub Symfony.">
+    <meta name="twitter:title" content="Contribute to BiblioGenius - Alpha Tester & Open Source">
+    <meta name="twitter:description" content="Become an Alpha tester or contribute to BiblioGenius development. Rust backend, Flutter app, Symfony hub.">
     <meta name="twitter:image" content="https://bibliogenius.org/assets/home-bibliogenius-fr.jpg">
 
     <!-- Favicon -->
@@ -130,21 +130,21 @@
 
 <body>
 
-    <a href="#main-content" class="skip-link">Aller au contenu</a>
+    <a href="#main-content" class="skip-link">Skip to content</a>
 
     <header class="hero" role="banner" style="min-height: 40vh; padding-bottom: 2rem;">
         <nav class="lang-switcher" aria-label="Navigation">
-            <a href="/" class="btn-secondary" style="padding: 0.5rem 1rem; font-size: 0.9rem;">← Retour</a>
-            <select onchange="location.href=this.value" aria-label="Langue" style="background:rgba(255,255,255,0.1);color:#fff;border:1px solid rgba(255,255,255,0.3);padding:0.3rem 0.5rem;border-radius:0.375rem;font-size:0.85rem;cursor:pointer;">
+            <a href="/en/" class="btn-secondary" style="padding: 0.5rem 1rem; font-size: 0.9rem;">← Back</a>
+            <select onchange="location.href=this.value" aria-label="Language" style="background:rgba(255,255,255,0.1);color:#fff;border:1px solid rgba(255,255,255,0.3);padding:0.3rem 0.5rem;border-radius:0.375rem;font-size:0.85rem;cursor:pointer;">
             <option value="/de/contribute.html">Deutsch</option>
-            <option value="/en/contribute.html">English</option>
+            <option value="/en/contribute.html" selected>English</option>
             <option value="/es/contribute.html">Español</option>
-            <option value="/contribute.html" selected>Français</option>
+            <option value="/contribute.html">Français</option>
             </select>
         </nav>
         <div class="hero-content">
-            <h1>Contribuer au Projet</h1>
-            <p>Devenez testeur Alpha ou rejoignez le développement.</p>
+            <h1>Contribute to the Project</h1>
+            <p>Become an Alpha tester or join the development effort.</p>
         </div>
     </header>
 
@@ -154,22 +154,22 @@
         <div class="split-container">
             <!-- Tester Section -->
             <div class="split-card">
-                <h2><span aria-hidden="true">🧪</span> Devenir Testeur Alpha</h2>
-                <p>Installez la dernière version et aidez-nous à trouver les bugs.</p>
+                <h2><span aria-hidden="true">🧪</span> Become an Alpha Tester</h2>
+                <p>Install the latest version and help us find bugs.</p>
 
                 <div role="status"
                     style="background: rgba(255,165,0,0.1); border-left: 4px solid orange; padding: 1rem; margin: 1rem 0;">
-                    <strong>Dernière version :</strong> <span class="version-tag">v0.7.2-alpha.2</span>
+                    <strong>Latest version:</strong> <span class="version-tag">v0.7.2-alpha.2</span>
                 </div>
 
-                <ul class="download-list" aria-label="Téléchargements">
+                <ul class="download-list" aria-label="Downloads">
                     <li>
                         <a href="https://github.com/bibliogenius/bibliogenius-app/releases/download/v0.7.2-alpha.2/BiblioGenius-macOS.dmg"
                             class="download-btn">
                             <span class="download-icon" aria-hidden="true"><svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path d="M12.152 6.896c-.948 0-2.415-1.078-3.96-1.04-2.04.027-3.91 1.183-4.961 3.014-2.117 3.675-.546 9.103 1.519 12.09 1.013 1.454 2.208 3.09 3.792 3.039 1.52-.065 2.09-.987 3.935-.987 1.831 0 2.35.987 3.96.948 1.637-.026 2.676-1.48 3.676-2.948 1.156-1.688 1.636-3.325 1.662-3.415-.039-.013-3.182-1.221-3.22-4.857-.026-3.04 2.48-4.494 2.597-4.559-1.429-2.09-3.623-2.324-4.39-2.376-2-.156-3.675 1.09-4.61 1.09zM15.53 3.83c.843-1.012 1.4-2.427 1.245-3.83-1.207.052-2.662.805-3.532 1.818-.78.896-1.454 2.338-1.273 3.714 1.338.104 2.715-.688 3.559-1.701"/></svg></span>
                             <div>
                                 <strong>macOS</strong><br>
-                                <small>Puce Apple (M1/M2) & Intel</small>
+                                <small>Apple Silicon (M1/M2) & Intel</small>
                             </div>
                         </a>
                     </li>
@@ -189,7 +189,7 @@
                             <span class="download-icon" aria-hidden="true"><svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><rect x="1" y="1" width="10" height="10" rx="1"/><rect x="13" y="1" width="10" height="10" rx="1"/><rect x="1" y="13" width="10" height="10" rx="1"/><rect x="13" y="13" width="10" height="10" rx="1"/></svg></span>
                             <div>
                                 <strong>Windows</strong><br>
-                                <small>Zip portable</small>
+                                <small>Portable zip</small>
                             </div>
                         </a>
                     </li>
@@ -208,7 +208,7 @@
                             <span class="download-icon" aria-hidden="true"><svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path d="M18.4395 5.5586c-.675 1.1664-1.352 2.3318-2.0274 3.498-.0366-.0155-.0742-.0286-.1113-.043-1.8249-.6957-3.484-.8-4.42-.787-1.8551.0185-3.3544.4643-4.2597.8203-.084-.1494-1.7526-3.021-2.0215-3.4864a1.1451 1.1451 0 0 0-.1406-.1914c-.3312-.364-.9054-.4859-1.379-.203-.475.282-.7136.9361-.3886 1.5019 1.9466 3.3696-.0966-.2158 1.9473 3.3593.0172.031-.4946.2642-1.3926 1.0177C2.8987 12.176.452 14.772 0 18.9902h24c-.119-1.1108-.3686-2.099-.7461-3.0683-.7438-1.9118-1.8435-3.2928-2.7402-4.1836a12.1048 12.1048 0 0 0-2.1309-1.6875c.6594-1.122 1.312-2.2559 1.9649-3.3848.2077-.3615.1886-.7956-.0079-1.1191a1.1001 1.1001 0 0 0-.8515-.5332c-.5225-.0536-.9392.3128-1.0488.5449zm-.0391 8.461c.3944.5926.324 1.3306-.1563 1.6503-.4799.3197-1.188.0985-1.582-.4941-.3944-.5927-.324-1.3307.1563-1.6504.4727-.315 1.1812-.1086 1.582.4941zM7.207 13.5273c.4803.3197.5506 1.0577.1563 1.6504-.394.5926-1.1038.8138-1.584.4941-.48-.3197-.5503-1.0577-.1563-1.6504.4008-.6021 1.1087-.8106 1.584-.4941z"/></svg></span>
                             <div>
                                 <strong>Android</strong><br>
-                                <small>Disponible sur demande</small>
+                                <small>Available on request</small>
                             </div>
                         </span>
                     </li>
@@ -216,63 +216,63 @@
 
                 <hr style="border-color: rgba(255,255,255,0.1); margin: 1.5rem 0;">
 
-                <h3><span aria-hidden="true">🐛</span> Un bug ?</h3>
-                <p>Signalez-le simplement :</p>
+                <h3><span aria-hidden="true">🐛</span> Found a bug?</h3>
+                <p>Report it easily:</p>
                 <div style="display: flex; gap: 10px; margin-top: 0.5rem;">
-                    <a href="mailto:contact@bibliogenius.org" class="btn btn-secondary" style="font-size: 0.9rem;">Par Email</a>
+                    <a href="mailto:contact@bibliogenius.org" class="btn btn-secondary" style="font-size: 0.9rem;">By Email</a>
                     <a href="https://github.com/bibliogenius/bibliogenius-app/issues/new" class="btn btn-secondary"
-                        style="font-size: 0.9rem;">Sur GitHub</a>
+                        style="font-size: 0.9rem;">On GitHub</a>
                 </div>
             </div>
 
             <!-- Developer Section -->
             <div class="split-card">
-                <h2><span aria-hidden="true">💻</span> Espace Contributeurs</h2>
-                <p>Le code est 100% Open Source.</p>
+                <h2><span aria-hidden="true">💻</span> Contributors Space</h2>
+                <p>The code is 100% Open Source.</p>
 
                 <ul style="margin: 1.5rem 0; padding-left: 1.2rem; line-height: 1.6;">
                     <li><strong>Backend :</strong> Rust (Axum, SeaORM, SQLite)</li>
-                    <li><strong>Application :</strong> Flutter (Mobile & Desktop)</li>
+                    <li><strong>App:</strong> Flutter (Mobile & Desktop)</li>
                     <li><strong>Hub :</strong> Symfony (PHP)</li>
                 </ul>
 
                 <a href="https://github.com/bibliogenius" class="btn btn-primary"
                     style="width: 100%; text-align: center; justify-content: center;">
-                    Explorer l'Organisation GitHub
+                    Explore the GitHub Organization
                 </a>
 
                 <div style="margin-top: 1.5rem;">
-                    <h3>Où commencer ?</h3>
+                    <h3>Where to start?</h3>
                     <p style="font-size: 0.9rem; color: #ccc; margin-bottom: 1rem;">
-                        Consultez nos issues \"Good First Issue\" — des tâches accessibles pour bien démarrer :
+                        Check out our \"Good First Issue\" issues — accessible tasks to get started:
                     </p>
-                    <ul class="download-list" aria-label="Good First Issues par projet">
+                    <ul class="download-list" aria-label="Good First Issues by project">
                         <li>
                             <a href="https://github.com/bibliogenius/bibliogenius-app/issues?q=is%3Aopen+label%3A%22good+first+issue%22"
-                                class="download-btn" aria-label="Good First Issues — Application Flutter : traductions, tests, UI">
+                                class="download-btn" aria-label="Good First Issues — Flutter App: translations, tests, UI">
                                 <span class="download-icon" aria-hidden="true">📱</span>
                                 <div>
-                                    <strong>App Flutter</strong><br>
-                                    <small>Traductions, tests, UI</small>
+                                    <strong>Flutter App</strong><br>
+                                    <small>Translations, tests, UI</small>
                                 </div>
                             </a>
                         </li>
                         <li>
                             <a href="https://github.com/bibliogenius/bibliogenius-public/issues?q=is%3Aopen+label%3A%22good+first+issue%22"
-                                class="download-btn" aria-label="Good First Issues — Site web : accessibilité, traduction">
+                                class="download-btn" aria-label="Good First Issues — Website: accessibility, translation">
                                 <span class="download-icon" aria-hidden="true">🌐</span>
                                 <div>
-                                    <strong>Site Web</strong><br>
-                                    <small>Accessibilité, traduction</small>
+                                    <strong>Website</strong><br>
+                                    <small>Accessibility, translation</small>
                                 </div>
                             </a>
                         </li>
                         <li>
                             <a href="https://github.com/bibliogenius/bibliogenius/issues?q=is%3Aopen+label%3A%22good+first+issue%22"
-                                class="download-btn" aria-label="Good First Issues — Serveur Rust : documentation, tests">
+                                class="download-btn" aria-label="Good First Issues — Rust Server: documentation, tests">
                                 <span class="download-icon" aria-hidden="true">🦀</span>
                                 <div>
-                                    <strong>Serveur Rust</strong><br>
+                                    <strong>Rust Server</strong><br>
                                     <small>Documentation, tests</small>
                                 </div>
                             </a>
@@ -287,9 +287,9 @@
 
     <footer class="footer" role="contentinfo">
         <div class="container" style="text-align: center;">
-            <p>© 2025-2026 BiblioGenius — <a href=\"https://www.gnu.org/licenses/agpl-3.0.html\" style=\"color:var(--accent-light);\">AGPL-3.0</a> | <a href="/" style="color:white;">Retour à l'accueil</a></p>
+            <p>© 2025-2026 BiblioGenius — <a href=\"https://www.gnu.org/licenses/agpl-3.0.html\" style=\"color:var(--accent-light);\">AGPL-3.0</a> | <a href="/en/" style="color:white;">Back to home</a></p>
             <a href="https://bff.ecoindex.fr/redirect/?url=https://bibliogenius.org/contribute.html" target="_blank" rel="noopener" style="display:inline-block;margin-top:1rem;">
-                <img src="https://bff.ecoindex.fr/badge/?theme=dark&url=https://bibliogenius.org/contribute.html" alt="Score EcoIndex du site" loading="lazy">
+                <img src="https://bff.ecoindex.fr/badge/?theme=dark&url=https://bibliogenius.org/contribute.html" alt="EcoIndex site score" loading="lazy">
             </a>
         </div>
     </footer>
