--- a/en/tutorials.html
+++ b/en/tutorials.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
-<html lang="fr">
+<html lang="en">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tutoriels - BiblioGenius</title>
-    <meta name="description" content="Apprenez à utiliser BiblioGenius avec nos guides vidéo : import, gestion, partage.">
+    <title>Tutorials - BiblioGenius</title>
+    <meta name="description" content="Learn how to use BiblioGenius with our video guides: import, management, sharing.">
 
-    <link rel="canonical" href="https://bibliogenius.org/tutorials.html">
+    <link rel="canonical" href="https://bibliogenius.org/en/tutorials.html">
     <link rel="alternate" hreflang="de" href="https://bibliogenius.org/de/tutorials.html">
     <link rel="alternate" hreflang="en" href="https://bibliogenius.org/en/tutorials.html">
     <link rel="alternate" hreflang="es" href="https://bibliogenius.org/es/tutorials.html">
@@ -111,21 +111,21 @@
     <header class="hero" style="padding: 3rem 1.5rem;">
         <!-- Language Switcher -->
         <div class="lang-switcher">
-            <select onchange="location.href=this.value" class="lang-select" aria-label="Langue">
+            <select onchange="location.href=this.value" class="lang-select" aria-label="Language">
             <option value="/de/tutorials.html">Deutsch</option>
-            <option value="/en/tutorials.html">English</option>
+            <option value="/en/tutorials.html" selected>English</option>
             <option value="/es/tutorials.html">Español</option>
-            <option value="/tutorials.html" selected>Français</option>
+            <option value="/tutorials.html">Français</option>
             </select>
         </div>
         <div class="hero-content">
-            <h1>Tutoriels Vidéo</h1>
-            <p>Maîtrisez BiblioGenius en quelques minutes.</p>
+            <h1>Video Tutorials</h1>
+            <p>Master BiblioGenius in minutes.</p>
         </div>
     </header>
 
     <main class="tutorials-container">
-        <a href="/" class="back-link">← Retour à l'accueil</a>
+        <a href="/en/" class="back-link">← Back to home</a>
 
         <div class="tutorial-grid">
             <!-- Video 1: Import -->
@@ -138,16 +138,16 @@
                 <div style="text-align: center; margin-top: 0.5rem;">
                     <a href="https://www.youtube.com/watch?v=o2rZeG_hH4w" target="_blank"
                         style="font-size: 0.8rem; color: #6b7280; text-decoration: underline;">
-                        Si la vidéo ne s'affiche pas, cliquez ici pour la voir sur YouTube
+                        If the video doesn't load, click here to watch it on YouTube
                     </a>
                 </div>
                 <div class="tutorial-content">
                     <div style="margin-bottom: 0.75rem;">
-                        <span class="badge-lang badge-new">Nouveau</span>
-                        <span class="badge-lang">Audio: Français</span>
+                        <span class="badge-lang badge-new">New</span>
+                        <span class="badge-lang">Audio: French</span>
                     </div>
-                    <h2 class="tutorial-title">Comment importer vos livres</h2>
-                    <p class="tutorial-desc">Découvrez comment migrer vos données depuis Gleeph, Babelio ou Goodreads vers BiblioGenius en moins de 2 minutes.</p>
+                    <h2 class="tutorial-title">How to import your books</h2>
+                    <p class="tutorial-desc">Learn how to migrate your data from Gleeph, Babelio or Goodreads to BiblioGenius in less than 2 minutes. (French Audio)</p>
                 </div>
             </article>
 
@@ -157,21 +157,21 @@
                     <span style="font-size: 3rem;">&#x1F51C;</span>
                 </div>
                 <div class="tutorial-content">
-                    <h2 class="tutorial-title">Bientôt disponible...</h2>
-                    <p class="tutorial-desc">D'autres tutoriels sur le partage P2P et la gestion des prêts arrivent très vite !</p>
+                    <h2 class="tutorial-title">Coming soon...</h2>
+                    <p class="tutorial-desc">More tutorials on P2P sharing and loan management are on their way!</p>
                 </div>
             </article>
             -->
         </div>
 
         <div class="text-center" style="margin-top: 4rem;">
-            <p>Vous ne trouvez pas ce que vous cherchez ? <a href="mailto:contact@bibliogenius.org" style="color: var(--primary-color); font-weight: bold;">Contactez-nous</a>.</p>
+            <p>Can't find what you're looking for? <a href="mailto:contact@bibliogenius.org" style="color: var(--primary-color); font-weight: bold;">Contact us</a>.</p>
         </div>
     </main>
 
     <footer class="footer">
         <div class="container">
-            <p>© 2025 BiblioGenius. Votre bibliothèque, vos règles.</p>
+            <p>© 2025 BiblioGenius. Your library, your rules.</p>
         </div>
     </footer>
 </body>
