--- a/es/free-your-library.html
+++ b/es/free-your-library.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
-<html lang="fr">
+<html lang="es">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Libérez votre bibliothèque - BiblioGenius</title>
-    <meta name="description" content="Tutoriels pour importer vos données depuis Gleeph, Babelio, Goodreads, inventaire.io vers BiblioGenius.">
+    <title>Libera tu biblioteca - BiblioGenius</title>
+    <meta name="description" content="Tutoriales para importar tus datos desde Gleeph, Babelio, Goodreads, inventaire.io a BiblioGenius.">
 
-    <link rel="canonical" href="https://bibliogenius.org/free-your-library.html">
+    <link rel="canonical" href="https://bibliogenius.org/es/free-your-library.html">
     <link rel="alternate" hreflang="de" href="https://bibliogenius.org/de/free-your-library.html">
     <link rel="alternate" hreflang="en" href="https://bibliogenius.org/en/free-your-library.html">
     <link rel="alternate" hreflang="es" href="https://bibliogenius.org/es/free-your-library.html">
@@ -88,78 +88,78 @@
     <header class="hero" style="padding: 3rem 1.5rem;">
         <!-- Language Switcher -->
         <div class="lang-switcher">
-            <select onchange="location.href=this.value" class="lang-select" aria-label="Choisir la langue">
+            <select onchange="location.href=this.value" class="lang-select" aria-label="Elegir idioma">
             <option value="/de/free-your-library.html">Deutsch</option>
             <option value="/en/free-your-library.html">English</option>
-            <option value="/es/free-your-library.html">Español</option>
-            <option value="/free-your-library.html" selected>Français</option>
+            <option value="/es/free-your-library.html" selected>Español</option>
+            <option value="/free-your-library.html">Français</option>
             </select>
         </div>
         <div class="hero-content">
-            <h1>Libérez votre bibliothèque</h1>
-            <p>Vos livres ne doivent pas être prisonniers d'une plateforme.</p>
+            <h1>Libera tu biblioteca</h1>
+            <p>Tus libros no deberían estar prisioneros de una plataforma.</p>
         </div>
     </header>
 
     <main class="tutorial-container">
         <p style="text-align: center; font-size: 1.125rem; margin-bottom: 3rem;">
-            BiblioGenius est conçu pour respecter votre souveraineté numérique. Voici comment récupérer vos données depuis les plateformes les plus courantes pour les importer chez vous.
+            BiblioGenius está diseñado para respetar tu soberanía digital. Aquí tienes cómo recuperar tus datos de las plataformas más comunes para importarlos en casa.
         </p>
 
         <div style="text-align: center; margin-bottom: 3rem;">
-            <a href="/tutorials.html" class="btn btn-primary"
+            <a href="/es/tutorials.html" class="btn btn-primary"
                 style="display: inline-flex; align-items: center; gap: 0.5rem;">
                 <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"
                     stroke-linecap="round" stroke-linejoin="round">
                     <polygon points="23 7 16 12 23 17 23 7"></polygon>
                     <rect x="1" y="5" width="15" height="14" rx="2" ry="2"></rect>
                 </svg>
-                <span>Voir le tutoriel vidéo</span>
+                <span>Ver tutorial en video</span>
             </a>
         </div>
 
         <article class="platform-card" id="gleeph">
             <h2><span class="platform-icon">&#x1F4F1;</span> Gleeph</h2>
-            <p>Exportez votre bibliothèque au format CSV :</p>
+            <p>Exporta tu biblioteca en formato CSV:</p>
             <ul class="steps">
-                <li>Ouvrez l'application Gleeph sur votre mobile.</li><li>Allez dans l'onglet <strong>Profil</strong>.</li><li>Appuyez sur la roue dentée (Paramètres) en haut à droite.</li><li>Sélectionnez <strong>Exporter mes données</strong>.</li><li>Vous recevrez un fichier CSV par email ou pourrez l'enregistrer directement.</li>
+                <li>Abre la aplicación Gleeph en tu móvil.</li><li>Ve a la pestaña <strong>Perfil</strong>.</li><li>Toca el icono del engranaje (Ajustes) arriba a la derecha.</li><li>Selecciona <strong>Exportar mis datos</strong>.</li><li>Recibirás un archivo CSV por email o podrás guardarlo directamente.</li>
             </ul>
         </article>
 
         <article class="platform-card" id="babelio">
             <h2><span class="platform-icon">&#x1F4D6;</span> Babelio</h2>
-            <p>Récupérez votre liste de lecture :</p>
+            <p>Recupera tu lista de lectura:</p>
             <ul class="steps">
-                <li>Connectez-vous à votre compte sur le site Babelio.</li><li>Allez dans <strong>Mes livres</strong>.</li><li>Cherchez le lien <strong>Exporter mes livres</strong> (souvent en bas de page ou dans les options de liste).</li><li>Téléchargez le fichier CSV généré.</li>
+                <li>Inicia sesión en tu cuenta en el sitio de Babelio.</li><li>Ve a <strong>Mis libros</strong>.</li><li>Busca el enlace <strong>Exportar mis libros</strong> (normalmente al final de la página o en las opciones de lista).</li><li>Descarga el archivo CSV generado.</li>
             </ul>
         </article>
 
         <article class="platform-card" id="goodreads">
             <h2><span class="platform-icon">&#x1F30E;</span> Goodreads</h2>
-            <p>L'export standard de Goodreads :</p>
+            <p>La exportación estándar de Goodreads:</p>
             <ul class="steps">
-                <li>Allez sur <a href="https://www.goodreads.com">Goodreads.com</a> et connectez-vous.</li><li>Cliquez sur <strong>My Books</strong> dans la barre de navigation.</li><li>Dans le menu de gauche, cliquez sur <strong>Import and Export</strong>.</li><li>Cliquez sur le bouton <strong>Export Library</strong> en haut à droite.</li><li>Attendez que le fichier soit généré et cliquez sur le lien de téléchargement.</li>
+                <li>Ve a <a href="https://www.goodreads.com">Goodreads.com</a> e inicia sesión.</li><li>Haz clic en <strong>My Books</strong> en la barra de navegación.</li><li>En el menú de la izquierda, haz clic en <strong>Import and Export</strong>.</li><li>Haz clic en el botón <strong>Export Library</strong> arriba a la derecha.</li><li>Espera a que se genere el archivo y haz clic en el enlace de descarga.</li>
             </ul>
         </article>
 
         <article class="platform-card" id="inventaire">
             <h2><span class="platform-icon">&#x1F4E6;</span> inventaire.io</h2>
-            <p>Le projet ami respectueux des données :</p>
+            <p>El proyecto amigo respetuoso de los datos:</p>
             <ul class="steps">
-                <li>Connectez-vous à <a href="https://inventaire.io">inventaire.io</a>.</li><li>Allez dans vos <strong>Paramètres</strong> de profil.</li><li>Recherchez la section <strong>Données</strong> ou <strong>Export</strong>.</li><li>Choisissez le format CSV ou JSON (BiblioGenius préfère le CSV pour le moment).</li>
+                <li>Inicia sesión en <a href="https://inventaire.io">inventaire.io</a>.</li><li>Ve a los <strong>Ajustes</strong> de tu perfil.</li><li>Busca la sección <strong>Datos</strong> o <strong>Exportar</strong>.</li><li>Elige el formato CSV o JSON (BiblioGenius prefiere CSV por ahora).</li>
             </ul>
         </article>
 
         <section style="text-align: center; margin-top: 4rem;">
-            <h3>Et ensuite ?</h3>
-            <p>Une fois votre fichier en main, ouvrez BiblioGenius et utilisez l'assistant de migration pour importer vos livres en un clic.</p>
-            <a href="/" class="back-home">← Retour à l'accueil</a>
+            <h3>¿Y ahora qué?</h3>
+            <p>Una vez que tengas tu archivo, abre BiblioGenius y usa el asistente de migración para importar tus libros con un solo clic.</p>
+            <a href="/es/" class="back-home">← Volver al inicio</a>
         </section>
     </main>
 
     <footer class="footer">
         <div class="container">
-            <p>© 2025 BiblioGenius. Votre bibliothèque, vos règles.</p>
+            <p>© 2025 BiblioGenius. Tu biblioteca, tus reglas.</p>
         </div>
     </footer>
 </body>
