--- a/es/tutorials.html
+++ b/es/tutorials.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
-<html lang="fr">
+<html lang="es">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tutoriels - BiblioGenius</title>
-    <meta name="description" content="Apprenez à utiliser BiblioGenius avec nos guides vidéo : import, gestion, partage.">
+    <title>Tutoriales - BiblioGenius</title>
+    <meta name="description" content="Aprende a usar BiblioGenius con nuestras guías en video: importación, gestión, compartir.">
 
-    <link rel="canonical" href="https://bibliogenius.org/tutorials.html">
+    <link rel="canonical" href="https://bibliogenius.org/es/tutorials.html">
     <link rel="alternate" hreflang="de" href="https://bibliogenius.org/de/tutorials.html">
     <link rel="alternate" hreflang="en" href="https://bibliogenius.org/en/tutorials.html">
     <link rel="alternate" hreflang="es" href="https://bibliogenius.org/es/tutorials.html">
@@ -111,21 +111,21 @@
     <header class="hero" style="padding: 3rem 1.5rem;">
         <!-- Language Switcher -->
         <div class="lang-switcher">
-            <select onchange="location.href=this.value" class="lang-select" aria-label="Langue">
+            <select onchange="location.href=this.value" class="lang-select" aria-label="Idioma">
             <option value="/de/tutorials.html">Deutsch</option>
             <option value="/en/tutorials.html">English</option>
-            <option value="/es/tutorials.html">Español</option>
-            <option value="/tutorials.html" selected>Français</option>
+            <option value="/es/tutorials.html" selected>Español</option>
+            <option value="/tutorials.html">Français</option>
             </select>
         </div>
         <div class="hero-content">
-            <h1>Tutoriels Vidéo</h1>
-            <p>Maîtrisez BiblioGenius en quelques minutes.</p>
+            <h1>Tutoriales en Video</h1>
+            <p>Domina BiblioGenius en minutos.</p>
         </div>
     </header>
 
     <main class="tutorials-container">
-        <a href="/" class="back-link">← Retour à l'accueil</a>
+        <a href="/es/" class="back-link">← Volver al inicio</a>
 
         <div class="tutorial-grid">
             <!-- Video 1: Import -->
@@ -138,16 +138,16 @@
                 <div style="text-align: center; margin-top: 0.5rem;">
                     <a href="https://www.youtube.com/watch?v=o2rZeG_hH4w" target="_blank"
                         style="font-size: 0.8rem; color: #6b7280; text-decoration: underline;">
-                        Si la vidéo ne s'affiche pas, cliquez ici pour la voir sur YouTube
+                        Si el video no se muestra, haz clic aquí para verlo en YouTube
                     </a>
                 </div>
                 <div class="tutorial-content">
                     <div style="margin-bottom: 0.75rem;">
-                        <span class="badge-lang badge-new">Nouveau</span>
-                        <span class="badge-lang">Audio: Français</span>
+                        <span class="badge-lang badge-new">Nuevo</span>
+                        <span class="badge-lang">Audio: Francés</span>
                     </div>
-                    <h2 class="tutorial-title">Comment importer vos livres</h2>
-                    <p class="tutorial-desc">Découvrez comment migrer vos données depuis Gleeph, Babelio ou Goodreads vers BiblioGenius en moins de 2 minutes.</p>
+                    <h2 class="tutorial-title">Cómo importar tus libros</h2>
+                    <p class="tutorial-desc">Descubre cómo migrar tus datos de Gleeph, Babelio o Goodreads a BiblioGenius en menos de 2 minutos. (Audio en francés)</p>
                 </div>
             </article>
 
@@ -157,21 +157,21 @@
                     <span style="font-size: 3rem;">&#x1F51C;</span>
                 </div>
                 <div class="tutorial-content">
-                    <h2 class="tutorial-title">Bientôt disponible...</h2>
-                    <p class="tutorial-desc">D'autres tutoriels sur le partage P2P et la gestion des prêts arrivent très vite !</p>
+                    <h2 class="tutorial-title">Próximamente...</h2>
+                    <p class="tutorial-desc">¡Más tutoriales sobre el intercambio P2P y la gestión de préstamos están en camino!</p>
                 </div>
             </article>
             -->
         </div>
 
         <div class="text-center" style="margin-top: 4rem;">
-            <p>Vous ne trouvez pas ce que vous cherchez ? <a href="mailto:contact@bibliogenius.org" style="color: var(--primary-color); font-weight: bold;">Contactez-nous</a>.</p>
+            <p>¿No encuentras lo que buscas? <a href="mailto:contact@bibliogenius.org" style="color: var(--primary-color); font-weight: bold;">Contáctanos</a>.</p>
         </div>
     </main>
 
     <footer class="footer">
         <div class="container">
-            <p>© 2025 BiblioGenius. Votre bibliothèque, vos règles.</p>
+            <p>© 2025 BiblioGenius. Tu biblioteca, tus reglas.</p>
         </div>
     </footer>
 </body>
