--- a/de/free-your-library.html
+++ b/de/free-your-library.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
-<html lang="fr">
+<html lang="de">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Libérez votre bibliothèque - BiblioGenius</title>
-    <meta name="description" content="Tutoriels pour importer vos données depuis Gleeph, Babelio, Goodreads, inventaire.io vers BiblioGenius.">
+    <title>Befreien Sie Ihre Bibliothek - BiblioGenius</title>
+    <meta name="description" content="Anleitungen zum Importieren Ihrer Daten von Gleeph, Babelio, Goodreads, inventaire.io zu BiblioGenius.">
 
-    <link rel="canonical" href="https://bibliogenius.org/free-your-library.html">
+    <link rel="canonical" href="https://bibliogenius.org/de/free-your-library.html">
     <link rel="alternate" hreflang="de" href="https://bibliogenius.org/de/free-your-library.html">
     <link rel="alternate" hreflang="en" href="https://bibliogenius.org/en/free-your-library.html">
     <link rel="alternate" hreflang="es" href="https://bibliogenius.org/es/free-your-library.html">
@@ -88,78 +88,78 @@
     <header class="hero" style="padding: 3rem 1.5rem;">
         <!-- Language Switcher -->
         <div class="lang-switcher">
-            <select onchange="location.href=this.value" class="lang-select" aria-label="Choisir la langue">
-            <option value="/de/free-your-library.html">Deutsch</option>
+            <select onchange="location.href=this.value" class="lang-select" aria-label="Sprache wählen">
+            <option value="/de/free-your-library.html" selected>Deutsch</option>
             <option value="/en/free-your-library.html">English</option>
             <option value="/es/free-your-library.html">Español</option>
-            <option value="/free-your-library.html" selected>Français</option>
+            <option value="/free-your-library.html">Français</option>
             </select>
         </div>
         <div class="hero-content">
-            <h1>Libérez votre bibliothèque</h1>
-            <p>Vos livres ne doivent pas être prisonniers d'une plateforme.</p>
+            <h1>Befreien Sie Ihre Bibliothek</h1>
+            <p>Ihre Bücher sollten nicht auf einer Plattform gefangen sein.</p>
         </div>
     </header>
 
     <main class="tutorial-container">
         <p style="text-align: center; font-size: 1.125rem; margin-bottom: 3rem;">
-            BiblioGenius est conçu pour respecter votre souveraineté numérique. Voici comment récupérer vos données depuis les plateformes les plus courantes pour les importer chez vous.
+            BiblioGenius wurde entwickelt, um Ihre digitale Souveränität zu respektieren. Hier erfahren Sie, wie Sie Ihre Daten von den gängigsten Plattformen abrufen, um sie zu Hause zu importieren.
         </p>
 
         <div style="text-align: center; margin-bottom: 3rem;">
-            <a href="/tutorials.html" class="btn btn-primary"
+            <a href="/de/tutorials.html" class="btn btn-primary"
                 style="display: inline-flex; align-items: center; gap: 0.5rem;">
                 <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"
                     stroke-linecap="round" stroke-linejoin="round">
                     <polygon points="23 7 16 12 23 17 23 7"></polygon>
                     <rect x="1" y="5" width="15" height="14" rx="2" ry="2"></rect>
                 </svg>
-                <span>Voir le tutoriel vidéo</span>
+                <span>Videoanleitung ansehen</span>
             </a>
         </div>
 
         <article class="platform-card" id="gleeph">
             <h2><span class="platform-icon">&#x1F4F1;</span> Gleeph</h2>
-            <p>Exportez votre bibliothèque au format CSV :</p>
+            <p>Exportieren Sie Ihre Bibliothek im CSV-Format:</p>
             <ul class="steps">
-                <li>Ouvrez l'application Gleeph sur votre mobile.</li><li>Allez dans l'onglet <strong>Profil</strong>.</li><li>Appuyez sur la roue dentée (Paramètres) en haut à droite.</li><li>Sélectionnez <strong>Exporter mes données</strong>.</li><li>Vous recevrez un fichier CSV par email ou pourrez l'enregistrer directement.</li>
+                <li>Öffnen Sie die Gleeph-App auf Ihrem Handy.</li><li>Gehen Sie zum Tab <strong>Profil</strong>.</li><li>Tippen Sie auf das Zahnrad-Symbol (Einstellungen) oben rechts.</li><li>Wählen Sie <strong>Meine Daten exportieren</strong>.</li><li>Sie erhalten eine CSV-Datei per E-Mail oder können sie direkt speichern.</li>
             </ul>
         </article>
 
         <article class="platform-card" id="babelio">
             <h2><span class="platform-icon">&#x1F4D6;</span> Babelio</h2>
-            <p>Récupérez votre liste de lecture :</p>
+            <p>Rufen Sie Ihre Leseliste ab:</p>
             <ul class="steps">
-                <li>Connectez-vous à votre compte sur le site Babelio.</li><li>Allez dans <strong>Mes livres</strong>.</li><li>Cherchez le lien <strong>Exporter mes livres</strong> (souvent en bas de page ou dans les options de liste).</li><li>Téléchargez le fichier CSV généré.</li>
+                <li>Melden Sie sich bei Ihrem Konto auf der Babelio-Website an.</li><li>Gehen Sie zu <strong>Meine Bücher</strong>.</li><li>Suchen Sie nach dem Link <strong>Meine Bücher exportieren</strong> (meist unten auf der Seite oder in den Listenoptionen).</li><li>Laden Sie die generierte CSV-Datei herunter.</li>
             </ul>
         </article>
 
         <article class="platform-card" id="goodreads">
             <h2><span class="platform-icon">&#x1F30E;</span> Goodreads</h2>
-            <p>L'export standard de Goodreads :</p>
+            <p>Der Standard-Goodreads-Export:</p>
             <ul class="steps">
-                <li>Allez sur <a href="https://www.goodreads.com">Goodreads.com</a> et connectez-vous.</li><li>Cliquez sur <strong>My Books</strong> dans la barre de navigation.</li><li>Dans le menu de gauche, cliquez sur <strong>Import and Export</strong>.</li><li>Cliquez sur le bouton <strong>Export Library</strong> en haut à droite.</li><li>Attendez que le fichier soit généré et cliquez sur le lien de téléchargement.</li>
+                <li>Gehen Sie auf <a href="https://www.goodreads.com">Goodreads.com</a> und melden Sie sich an.</li><li>Klicken Sie in der Navigationsleiste auf <strong>My Books</strong>.</li><li>Klicken Sie im linken Menü auf <strong>Import and Export</strong>.</li><li>Klicken Sie oben rechts auf die Schaltfläche <strong>Export Library</strong>.</li><li>Warten Sie, bis die Datei generiert wurde, und klicken Sie auf den Download-Link.</li>
             </ul>
         </article>
 
         <article class="platform-card" id="inventaire">
             <h2><span class="platform-icon">&#x1F4E6;</span> inventaire.io</h2>
-            <p>Le projet ami respectueux des données :</p>
+            <p>Das datenfreundliche Geschwisterprojekt:</p>
             <ul class="steps">
-                <li>Connectez-vous à <a href="https://inventaire.io">inventaire.io</a>.</li><li>Allez dans vos <strong>Paramètres</strong> de profil.</li><li>Recherchez la section <strong>Données</strong> ou <strong>Export</strong>.</li><li>Choisissez le format CSV ou JSON (BiblioGenius préfère le CSV pour le moment).</li>
+                <li>Melden Sie sich bei <a href="https://inventaire.io">inventaire.io</a> an.</li><li>Gehen Sie zu Ihren Profil-<strong>Einstellungen</strong>.</li><li>Suchen Sie den Abschnitt <strong>Daten</strong> oder <strong>Export</strong>.</li><li>Wählen Sie das CSV- oder JSON-Format (BiblioGenius bevorzugt derzeit CSV).</li>
             </ul>
         </article>
 
         <section style="text-align: center; margin-top: 4rem;">
-            <h3>Et ensuite ?</h3>
-            <p>Une fois votre fichier en main, ouvrez BiblioGenius et utilisez l'assistant de migration pour importer vos livres en un clic.</p>
-            <a href="/" class="back-home">← Retour à l'accueil</a>
+            <h3>Wie geht es weiter?</h3>
+            <p>Sobald Sie Ihre Datei haben, öffnen Sie BiblioGenius und verwenden Sie den Migrationsassistenten, um Ihre Bücher mit einem Klick zu importieren.</p>
+            <a href="/de/" class="back-home">← Zurück zur Startseite</a>
         </section>
     </main>
 
     <footer class="footer">
         <div class="container">
-            <p>© 2025 BiblioGenius. Votre bibliothèque, vos règles.</p>
+            <p>© 2025 BiblioGenius. Ihre Bibliothek, Ihre Regeln.</p>
         </div>
     </footer>
 </body>
