--- a/en/free-your-library.html
+++ b/en/free-your-library.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
-<html lang="fr">
+<html lang="en">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Libérez votre bibliothèque - BiblioGenius</title>
-    <meta name="description" content="Tutoriels pour importer vos données depuis Gleeph, Babelio, Goodreads, inventaire.io vers BiblioGenius.">
+    <title>Free your library - BiblioGenius</title>
+    <meta name="description" content="Tutorials to import your data from Gleeph, Babelio, Goodreads, inventaire.io to BiblioGenius.">
 
-    <link rel="canonical" href="https://bibliogenius.org/free-your-library.html">
+    <link rel="canonical" href="https://bibliogenius.org/en/free-your-library.html">
     <link rel="alternate" hreflang="de" href="https://bibliogenius.org/de/free-your-library.html">
     <link rel="alternate" hreflang="en" href="https://bibliogenius.org/en/free-your-library.html">
     <link rel="alternate" hreflang="es" href="https://bibliogenius.org/es/free-your-library.html">
@@ -88,78 +88,78 @@
     <header class="hero" style="padding: 3rem 1.5rem;">
         <!-- Language Switcher -->
         <div class="lang-switcher">
-            <select onchange="location.href=this.value" class="lang-select" aria-label="Choisir la langue">
+            <select onchange="location.href=this.value" class="lang-select" aria-label="Choose language">
             <option value="/de/free-your-library.html">Deutsch</option>
-            <option value="/en/free-your-library.html">English</option>
+            <option value="/en/free-your-library.html" selected>English</option>
             <option value="/es/free-your-library.html">Español</option>
-            <option value="/free-your-library.html" selected>Français</option>
+            <option value="/free-your-library.html">Français</option>
             </select>
         </div>
         <div class="hero-content">
-            <h1>Libérez votre bibliothèque</h1>
-            <p>Vos livres ne doivent pas être prisonniers d'une plateforme.</p>
+            <h1>Free your library</h1>
+            <p>Your books shouldn't be trapped on one platform.</p>
         </div>
     </header>
 
     <main class="tutorial-container">
         <p style="text-align: center; font-size: 1.125rem; margin-bottom: 3rem;">
-            BiblioGenius est conçu pour respecter votre souveraineté numérique. Voici comment récupérer vos données depuis les plateformes les plus courantes pour les importer chez vous.
+            BiblioGenius is designed to respect your digital sovereignty. Here's how to retrieve your data from the most common platforms to import them at home.
         </p>
 
         <div style="text-align: center; margin-bottom: 3rem;">
-            <a href="/tutorials.html" class="btn btn-primary"
+            <a href="/en/tutorials.html" class="btn btn-primary"
                 style="display: inline-flex; align-items: center; gap: 0.5rem;">
                 <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"
                     stroke-linecap="round" stroke-linejoin="round">
                     <polygon points="23 7 16 12 23 17 23 7"></polygon>
                     <rect x="1" y="5" width="15" height="14" rx="2" ry="2"></rect>
                 </svg>
-                <span>Voir le tutoriel vidéo</span>
+                <span>Watch video tutorial</span>
             </a>
         </div>
 
         <article class="platform-card" id="gleeph">
             <h2><span class="platform-icon">&#x1F4F1;</span> Gleeph</h2>
-            <p>Exportez votre bibliothèque au format CSV :</p>
+            <p>Export your library in CSV format:</p>
             <ul class="steps">
-                <li>Ouvrez l'application Gleeph sur votre mobile.</li><li>Allez dans l'onglet <strong>Profil</strong>.</li><li>Appuyez sur la roue dentée (Paramètres) en haut à droite.</li><li>Sélectionnez <strong>Exporter mes données</strong>.</li><li>Vous recevrez un fichier CSV par email ou pourrez l'enregistrer directement.</li>
+                <li>Open the Gleeph app on your mobile.</li><li>Go to the <strong>Profile</strong> tab.</li><li>Tap the gear icon (Settings) at the top right.</li><li>Select <strong>Export my data</strong>.</li><li>You will receive a CSV file by email or can save it directly.</li>
             </ul>
         </article>
 
         <article class="platform-card" id="babelio">
             <h2><span class="platform-icon">&#x1F4D6;</span> Babelio</h2>
-            <p>Récupérez votre liste de lecture :</p>
+            <p>Retrieve your reading list:</p>
             <ul class="steps">
-                <li>Connectez-vous à votre compte sur le site Babelio.</li><li>Allez dans <strong>Mes livres</strong>.</li><li>Cherchez le lien <strong>Exporter mes livres</strong> (souvent en bas de page ou dans les options de liste).</li><li>Téléchargez le fichier CSV généré.</li>
+                <li>Log in to your account on the Babelio website.</li><li>Go to <strong>My books</strong>.</li><li>Look for the <strong>Export my books</strong> link (usually at the bottom of the page or in list options).</li><li>Download the generated CSV file.</li>
             </ul>
         </article>
 
         <article class="platform-card" id="goodreads">
             <h2><span class="platform-icon">&#x1F30E;</span> Goodreads</h2>
-            <p>L'export standard de Goodreads :</p>
+            <p>The standard Goodreads export:</p>
             <ul class="steps">
-                <li>Allez sur <a href="https://www.goodreads.com">Goodreads.com</a> et connectez-vous.</li><li>Cliquez sur <strong>My Books</strong> dans la barre de navigation.</li><li>Dans le menu de gauche, cliquez sur <strong>Import and Export</strong>.</li><li>Cliquez sur le bouton <strong>Export Library</strong> en haut à droite.</li><li>Attendez que le fichier soit généré et cliquez sur le lien de téléchargement.</li>
+                <li>Go to <a href="https://www.goodreads.com">Goodreads.com</a> and log in.</li><li>Click on <strong>My Books</strong> in the navigation bar.</li><li>In the left menu, click on <strong>Import and Export</strong>.</li><li>Click the <strong>Export Library</strong> button at the top right.</li><li>Wait for the file to be generated and click the download link.</li>
             </ul>
         </article>
 
         <article class="platform-card" id="inventaire">
             <h2><span class="platform-icon">&#x1F4E6;</span> inventaire.io</h2>
-            <p>Le projet ami respectueux des données :</p>
+            <p>The data-friendly sibling project:</p>
             <ul class="steps">
-                <li>Connectez-vous à <a href="https://inventaire.io">inventaire.io</a>.</li><li>Allez dans vos <strong>Paramètres</strong> de profil.</li><li>Recherchez la section <strong>Données</strong> ou <strong>Export</strong>.</li><li>Choisissez le format CSV ou JSON (BiblioGenius préfère le CSV pour le moment).</li>
+                <li>Log in to <a href="https://inventaire.io">inventaire.io</a>.</li><li>Go to your profile <strong>Settings</strong>.</li><li>Look for the <strong>Data</strong> or <strong>Export</strong> section.</li><li>Choose CSV or JSON format (BiblioGenius prefers CSV for now).</li>
             </ul>
         </article>
 
         <section style="text-align: center; margin-top: 4rem;">
-            <h3>Et ensuite ?</h3>
-            <p>Une fois votre fichier en main, ouvrez BiblioGenius et utilisez l'assistant de migration pour importer vos livres en un clic.</p>
-            <a href="/" class="back-home">← Retour à l'accueil</a>
+            <h3>What's next?</h3>
+            <p>Once you have your file, open BiblioGenius and use the migration wizard to import your books in one click.</p>
+            <a href="/en/" class="back-home">← Back to home</a>
         </section>
     </main>
 
     <footer class="footer">
         <div class="container">
-            <p>© 2025 BiblioGenius. Votre bibliothèque, vos règles.</p>
+            <p>© 2025 BiblioGenius. Your library, your rules.</p>
         </div>
     </footer>
 </body>
